initialize shopping-list

--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
     <head>
         <title>My Webpage</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-<body>
-        Hello, world!
+	<body>
+        <p class="head">shopping list:</p>
+        <ul id="top">
+        	<li>Milk</li>
+        	<a href="first.html">See milk discount...</a>
+        	<li>Chocolate</li>
+        	<a href="second.html">See top 3</a>
+        	<li>Candy</li>
+        	<a href="third.html">See delicious candy...</a>
+        </ul>
     </body>
 </html>
