finish with scss and UI things

--- a/first.html
+++ b/first.html
@@ -1,23 +1,9 @@
-<!--This is a milk page-->
+<!--This is a milk info page-->
 <!DOCTYPE html>
 <html>
 <head>
 	<title>milk info</title>
-	<style type="text/css">
-		table {
-			border: 2px solid black;
-			border-collapse: collapse;
-			width: 50%
-		}
-		th, td {
-			border:1px solid black;
-			padding: 5px;
-			text-align: center;
-		}
-		th {
-			background-color: lightgray;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>Milk for Sale</h1>
@@ -43,5 +29,8 @@
 			<td>40%</td>
 		</tr>
 	</table>
+	<p class="back">
+		<a href="index.html">Back to shopping list.</a>
+	</p>
 </body>
 </html>
