--- a/second.html
+++ b/second.html
@@ -9,11 +9,13 @@
 	<h1 class="head">Top Three Chocolate for last month!</h1>
 	
 	<p id="statement">Top 1 : Patchi</p>
-	<img src="img/top1.jpg" alt="top1" width="60%">
+	<img src="img/top1.jpg">
 	<p id="statement">Top 2 : ChocZero</p>
-	<img src="img/top2.jpg" alt="top2" width="60%">
+	<img src="img/top2.jpg">
 	<p id="statement">Top 3 : Lindt</p>
-	<img src="img/top3.jpg" alt="top3" width="60%">
+	<img src="img/top3.jpg">
+
+	<p class="back"><a href="index.html">Back to Shopping-List</a></p>
 
 </body>
 </html>
