--- a/third.html
+++ b/third.html
@@ -2,9 +2,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Candy info</title>
+	<title>Butter Info.</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 </head>
+
 <body>
-	<p>Not finished yet...</p>
+	<h1>Home of Butter</h1>
+	<ul>
+		<li><a href="#Storage">Storage</a></li>
+		<li><a href="#Usage">Usage</a></li>
+		<li><a href="#Dishes">Dishes</a></li>
+		<ul>
+			<li><a href="#Beurre blanc">Beurre blanc</a></li>
+			<li><a href="#Butter cake">Butter cake</a></li>
+			<li><a href="#Linzer torte">Linzer torte</a></li>
+			<li><a href="#Buttermilk pie">Buttermilk pie</a></li>
+		</ul>
+	</ul>
+
+	<h2 id="Storage">Storage</h2>
+	<p>
+		Normal butter softens to a spreadable consistency around 15 <span class="c"></span> (60 <span class="f"></span>), well above refrigerator temperatures. The "butter compartment" found in many refrigerators may be one of the warmer sections inside, but it still leaves butter quite hard. 
+	</p>	
+	
+	<h2 id="Usage">Usage</h2>
+	<ul>
+		<li>
+			Melted butter plays an important role in the preparation of sauces, most obviously in French cuisine. Beurre noisette (hazelnut butter) and Beurre noir (black butter) are sauces of melted butter cooked until the milk solids and sugars have turned golden or dark brown; they are often finished with an addition of vinegar or lemon juice.
+		</li>
+		<li>
+			In Poland, the butter lamb (Baranek wielkanocny) is a traditional addition to the Easter Meal for many Polish Catholics. Butter is shaped into a lamb either by hand or in a lamb-shaped mould. Butter is also used to make edible decorations to garnish other dishes.
+		</li>
+		<li>
+			Butter is used for saut<span class="e"></span>ing and frying, although its milk solids brown and burn above 150 <span class="c"></span> (250 <span class="f"></span>), a rather low temperature for most applications. The smoke point of butterfat is around 200 <span class="c"></span> (400 <span class="f"></span>), so clarified butter or ghee is better suited to frying.
+		</li>
+	</ul>
+
+	<h2 id="Dishes">Dishes</h2>
+	<p>
+		This is a list of butter dishes and foods in which butter is used as a primary ingredient or as a significant component of a dish or a food. 
+	</p> 
+	<ul id="imgli">
+		<li id="Beurre blanc">Beurre blanc</li>
+		<img src="img/Beurre blanc.jpg">
+		<li id="Butter cake">Butter cake</li>
+		<img src="img/ButterCake.jpg">
+		<li id="Linzer torte">Linzer torte</li>
+		<img src="img/LinzerTorte.jpg">
+		<li id="Buttermilk pie">Buttermilk pie</li>
+		<img src="img/ButtermilkPie.jpg">
+	</ul>
+
+	<p class="back"><a href="index.html">Back to Shopping-List</a></p>
 </body>
 </html>
