fix spelling error

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="col-sm-6 col-lg-4">
             <div class="card">
               <div class="card-body">
-                <img src="img/Chocolate.jpg" class="card-img-top" alt="...">
+                <img src="img/chocolate.jpg" class="card-img-top" alt="...">
                 <h5 class="card-title">Chocolate</h5>
                 <p class="card-text"> Buy 500g dark chocolates, more than 85% of cocoa content. </p>
                 <a href="second.html" class="btn btn-primary">Go to see top-3 chocolate.</a>
